update about file

--- a/TestWebAppProject/Views/Home/About.cshtml
+++ b/TestWebAppProject/Views/Home/About.cshtml
@@ -1,6 +1,21 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
+
+<p>Use this area to provide additional information.</p>
+
+
+@{
+    ViewData["Title"] = "About";
+}
+<h2>@ViewData["Title"].</h2>
+<h3>@ViewData["Message"]</h3>
+
+<p>Use this area to provide additional information.</p>
+
+@{
+    ViewData["Title"] = "About";
+}
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
