--- a/TestWebAppProject/Views/Home/About.cshtml
+++ b/TestWebAppProject/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Aboutttt";
 }
 
 <p>Use this area to provide additional information.</p>
