--- a/TestWebAppProject/Views/Home/Contact.cshtml
+++ b/TestWebAppProject/Views/Home/Contact.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Contactttttt";
-}
-<h2>@ViewData["Title"].</h2>
+﻿<h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
