commit these changes

--- a/TestWebAppProject/Views/Home/Contact.cshtml
+++ b/TestWebAppProject/Views/Home/Contact.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"].</h2>
+<h3>@ViewData["Contact"]</h3>
 <h3>@ViewData["Message"]</h3>
 
 <address>
