--- a/TestWebAppProject/Views/Home/About.cshtml
+++ b/TestWebAppProject/Views/Home/About.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About us";
 }
 
-<p>Use this area to provide additional information.</p>
+<p>All about us.</p>
 
 
 @{
